welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:10: error: ';' expected but ',' found.
def etage() {motif();gauche();avance();avance();droite();avance(),faireFleur(Color.BLUE);avance();gauche();avance();avance();droie();motif();gauche();avance();avance();droite();for (i <- 1 to 13) {recule()}}
                                                                 ^FlowerCase:13: error: ';' expected but ',' found.
def growFlowers() {etage(),desc(),etage()} 
                          ^